--- a/IT1/Netthandel/stylesheet.css
+++ b/IT1/Netthandel/stylesheet.css
@@ -2,18 +2,36 @@ body{
   background-color: #ECEFF1;
   margin: 0;
   font-family: helvetica, sans-serif;
+  
+
+}
+li a{
+  text-decoration: none;
+  background-color: #607D8B;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 10px;
+  color: white;
+  }
+ul li{
+  display: inline;
 }
 header{
   text-align: center;
   background-color: #37474F;
   color: #FFFFFF;
   padding: 5px;
+  margin-bottom: 5px;
 }
 header h1{
   margin: 0;
+  margin-bottom: 5px;
 }
+
+
+
 main{
-  width:1000px;
+  width:500px;
   margin:auto;
   background-color: #607D8B;
   color: #FFFFFF;
