--- a/IT1/Netthandel/stylesheet.css
+++ b/IT1/Netthandel/stylesheet.css
@@ -4,6 +4,8 @@ body{
   font-family: helvetica, sans-serif;
 
 
+
+
 }
 li a{
   text-decoration: none;
@@ -28,7 +30,50 @@ header h1{
   margin-bottom: 5px;
 }
 
+/* Dropdown Button */
+.dropbtn {
+  background-color: #607D8B;
+  color: white;
+  padding: 20px;
+  font-size: 16px;
+  border-radius: 10px;
+}
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #607D8B;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 10px
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  border-radius: 10px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd
+;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #607D8B;}
 
 main{
   width:700px;
