--- a/IT1/Netthandel/Stylesheet2.css
+++ b/IT1/Netthandel/Stylesheet2.css
@@ -2,8 +2,7 @@ body{
   background-color: #ECEFF1;
   margin: 0;
   font-family: helvetica, sans-serif;
-   background-image: url("Backround-image.jpg");
-   width: auto;
+
 }
 
 li a{
@@ -57,7 +56,7 @@ header h1{
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   border-radius: 10px
-  
+
 }
 
 /* Links inside the dropdown */
@@ -80,8 +79,8 @@ header h1{
 .dropdown:hover .dropbtn {background-color: #607D8B;}
 
 main{
-  width:700px;
-  margin:auto;
+  width: 700px;
+  margin: auto;
   background-color: #607D8B;
   color: #FFFFFF;
   margin-top: 15px;
@@ -94,41 +93,8 @@ main{
 main p {
   padding-left: 5px;
 }
-
 .grid-container{
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
-}
-.grid-container img{
-  width: 100%;
-}
-
-.litenMiddels{
-  grid-row: span 2;
-}
-.litenStor{
-  grid-row: span 3;
-}
-.middelsLiten{
-  grid-column: span 2;
-}
-.middelsMiddels{
-  grid-column: span 2;
-  grid-row: span 2;
-}
-.middelsStor{
-  grid-column: span 2;
-  grid-row: span 3;
-}
-.storLiten{
-  grid-column: span 3;
-}
-.storMiddels{
-  grid-column: span 3;
-  grid-row: span 2;
-}
-.storStor{
-  grid-column: span 3;
-  grid-row: span 3;
 }
