Greier ikke å fikse logoen

--- a/IT1/Netthandel/Stylesheet2.css
+++ b/IT1/Netthandel/Stylesheet2.css
@@ -12,8 +12,26 @@ li a{
   border-radius: 10px;
   margin: 10px;
   color: white;
+ }
 
-  }
+ body, html {
+   height: 100%;
+ }
+
+ .bg {
+   /* The image used */
+   background-image: url("Backround-image.jpg");
+
+   /* Full height */
+   height: 100%;
+
+   /* Center and scale the image nicely */
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+ }
+
+
 ul li{
   display: inline;
 }
