--- a/IT1/Netthandel/stylesheet.css
+++ b/IT1/Netthandel/stylesheet.css
@@ -6,6 +6,8 @@ body{
    width: auto;
 }
 
+background-repeat: no-repeat;
+
 li a{
   text-decoration: none;
   background-color: #607D8B;
@@ -57,7 +59,7 @@ header h1{
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   border-radius: 10px
-  
+
 }
 
 /* Links inside the dropdown */
