--- a/IT1/Netthandel/stylesheet.css
+++ b/IT1/Netthandel/stylesheet.css
@@ -6,7 +6,12 @@ body{
    width: auto;
 }
 
-background-repeat: no-repeat;
+img.sticky {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
 
 li a{
   text-decoration: none;
@@ -27,7 +32,7 @@ header{
   padding: 5px;
   margin-bottom: 5px;
   background-image: url("Backround-image.jpg");
-  width: auto;
+
 }
 header h1{
   margin: 0;
