--- a/IT1/Vurdering 30.april/indexstylesheet.css
+++ b/IT1/Vurdering 30.april/indexstylesheet.css
@@ -8,6 +8,11 @@ header{
   display: grid;
 }
 
+#myHeader {
+  padding: 40px;
+  text-align: center;
+}
+
 /*slideshow*/
 
 * {box-sizing:border-box}
@@ -22,38 +27,7 @@ header{
 
 
 
-/* Next & previous buttons */
-.prev, .next {
-  Cursor: pointer;
-  Position: absolute;
-  Top: 50%;
-  Width: auto;
-  Margin-top: -22px;
-  Padding: 16px;
-  Color: white;
-  Font-weight: bold;
-  Font-size: 18px;
-  Transition: 0.6s ease;
-  Border-radius: 0 3px 3px 0;
-  User-select: none;
-}
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-
-
-.active, .dot:hover {
-  background-color: #717171;
-}
 
 /* Fading animation */
 .fade {
