--- a/IT1/Vare-Hare/Bli Medlem.css
+++ b/IT1/Vare-Hare/Bli Medlem.css
@@ -30,7 +30,7 @@ input[type=submit]:hover {
   float: left;
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
+  padding left: 20px;
 }
 
 .text{
