--- a/IT1/Vare-Hare/Kontakt oss.css
+++ b/IT1/Vare-Hare/Kontakt oss.css
@@ -30,8 +30,9 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
-  align-content: center;
+  width: 100px;
+  float: right;
 }
 #hei{
- 
+
 }
