--- a/IT1/Vare-Hare/Test3.css
+++ b/IT1/Vare-Hare/Test3.css
@@ -1,56 +1,32 @@
-.header h1 {
-  font-size: 50px;
+* {
+  box-sizing: border-box;
 }
 
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+body {
+  margin: 0;
 }
 
-/* Style the topnav links */
-.topnav a {
+
+/* Create three unequal columns that floats next to each other */
+.column {
   float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  padding: 10px;
 }
 
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {
-  float: left;
-  width: 75%;
-}
-
-/* Right column */
-.rightcolumn {
+/* Left and right column */
+.column.side {
   float: left;
   width: 25%;
-  background-color: #f1f1f1;
-  padding-left: 20px;
 }
 
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
 
-/* Add a card effect for articles */
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
+/* Middle column */
+.column.middle {
+  width: 50%;
+}
+.row{
+  display: grid;
+  grid-template-columns: repeat(1fr,3);
 }
 
 /* Clear floats after the columns */
@@ -60,26 +36,9 @@
   clear: both;
 }
 
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
-    width: 100%;
-    padding: 0;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column.side, .column.middle {
     width: 100%;
   }
 }
