--- a/IT1/Vare-Hare/Test4.css
+++ b/IT1/Vare-Hare/Test4.css
@@ -1,3 +1,188 @@
+
+/*Bli medlem CSS*/
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* The snackbar - position it at the bottom and in the middle of the screen */
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+/* Add a background color and some padding around the form */
+.containerB {
+  float: left;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  width: 100%;
+}
+
+.text{
+  float: left;
+}
+
+
+/*Miljøvennelig CSS*/
+.w3-containerM{
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  display: grid;
+  padding: 10px;
+  text-align: center;
+}
+
+
+main{
+
+}
+
+img{
+  width: 100%;
+}
+
+#boxes{
+  grid-template-columns: 1fr 1fr;
+  display: grid;
+  padding: 30px;
+  grid-gap: 20px;
+}
+
+
+#boxes1{
+  grid-template-columns: 1fr 1fr 1fr;
+  display: grid;
+  padding: 40px;
+  grid-gap: 30px;
+  width: 100%;
+  margin left: 30px;
+  margin-right: 30px;
+}
+#boxes1 img{
+  height: 60%;
+  width: 100%;
+}
+#bilde1{
+  display: grid;
+  padding: 30px;
+  width: 100%;
+}
+
+main .box:hover{
+    transform: scale(1.1);
+    transition: 0.2s;
+    text-decoration: none;
+  }
+
+/*Kontakt oss CSS*/
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container-Kontakt {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 100px;
+  float: none;
+  width: 100%;
+}
+#hei{
+
+}
+
+
+
+
+
+/*Om Oss CSS*/
+
 * {
   box-sizing: border-box;
 }
@@ -68,6 +253,11 @@ body{
   width: 75%;
 }
 
+.leftcolumn2 {
+  float: none;
+  width: 100%;
+}
+
 /* Right column */
 .rightcolumn {
   float: left;
@@ -75,6 +265,8 @@ body{
   background-color: #f1f1f1;
   padding-left: 20px;
 }
+
+
 
 /* Fake image */
 .fakeimg {
@@ -85,9 +277,16 @@ body{
 
 /* Add a card effect for articles */
 .card {
-  background-color: white;
+  background-color: #a9d18e;
   padding: 20px;
   margin-top: 20px;
+}
+
+.card2 {
+  background-color: #a9d18e;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
 }
 
 /* Clear floats after the columns */
@@ -288,7 +487,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-deep-purple,.w3-hover-deep-purple:hover{color:#fff!important;background-color:#673ab7!important}
 .w3-red,.w3-hover-red:hover{color:#fff!important;background-color:#f44336!important}
 .w3-sand,.w3-hover-sand:hover{color:#000!important;background-color:#fdf5e6!important}
-.w3-teal,.w3-hover-teal:hover{color:#fff!important;background-color:#fce6d7!important}
+.w3-teal,.w3-hover-teal:hover{color:#fff!important;background-color:#a9d18e!important}
 .w3-yellow,.w3-hover-yellow:hover{color:#000!important;background-color:#ffeb3b!important}
 .w3-white,.w3-hover-white:hover{color:#000!important;background-color:#fff!important}
 .w3-black,.w3-hover-black:hover{color:#fff!important;background-color:#000!important}
@@ -318,7 +517,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-text-deep-purple,.w3-hover-text-deep-purple:hover{color:#673ab7!important}
 .w3-text-red,.w3-hover-text-red:hover{color:#f44336!important}
 .w3-text-sand,.w3-hover-text-sand:hover{color:#fdf5e6!important}
-.w3-text-teal,.w3-hover-text-teal:hover{color:#fce6d7!important}
+.w3-text-teal,.w3-hover-text-teal:hover{color:#a9d18e!important}
 .w3-text-yellow,.w3-hover-text-yellow:hover{color:#d2be0e!important}
 .w3-text-white,.w3-hover-text-white:hover{color:#fff!important}
 .w3-text-black,.w3-hover-text-black:hover{color:#000!important}
@@ -344,7 +543,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-deep-purple,.w3-hover-border-deep-purple:hover{border-color:#673ab7!important}
 .w3-border-red,.w3-hover-border-red:hover{border-color:#f44336!important}
 .w3-border-sand,.w3-hover-border-sand:hover{border-color:#fdf5e6!important}
-.w3-border-teal,.w3-hover-border-teal:hover{border-color:#fce6d7!important}
+.w3-border-teal,.w3-hover-border-teal:hover{border-color:#a9d18e!important}
 .w3-border-yellow,.w3-hover-border-yellow:hover{border-color:#ffeb3b!important}
 .w3-border-white,.w3-hover-border-white:hover{border-color:#fff!important}
 .w3-border-black,.w3-hover-border-black:hover{border-color:#000!important}
