--- a/IT1/Portfolio/style.css
+++ b/IT1/Portfolio/style.css
@@ -1,4 +1,6 @@
-
+body{
+  font-family: helvetica;
+}
 
 .About-me{
  column-count: 3;
@@ -15,6 +17,8 @@
   margin-left: 300px;
   margin-right: 300px;
   grid-gap: 55px;
+
+
 }
 
 #Book{
@@ -26,6 +30,11 @@
   background-color: black;
   transition: transform 0.3s;
   border-radius: 20px;
+  border: solid;
+  border-radius: 20px;
+  border-color: lightblue
+  border: 5px;
+
 }
 
 
@@ -44,6 +53,10 @@
   background-color: black;
   transition: transform 0.3s;
   border-radius: 20px;
+  border: solid;
+  border-radius: 20px;
+  border-color: lightblue
+  border: 5px;
 }
 
 
@@ -62,6 +75,10 @@
   text-decoration: none;
   background-color: black;
   transition: transform 0.3s;
+  border: solid;
+  border-radius: 20px;
+  border-color: lightblue
+  border: 5px;
 }
 
 
@@ -79,6 +96,10 @@
   text-decoration: none;
   background-color: black;
   transition: transform 0.3s;
+  border: solid;
+  border-radius: 20px;
+  border-color: lightblue
+  border: 5px;
 }
 
 #img{
@@ -111,6 +132,7 @@ h2{
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
+  border-radius: 20px;
 }
 
 .Text{
@@ -121,8 +143,6 @@ h2{
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%)
 }
-
-
 
 .text{
   background-color: purple;
@@ -153,6 +173,10 @@ h2{
 
 #nav img{
   width: 7%;
+}
+
+#nav img:hover{
+  
 }
 
 #say{
